Addind the start of a UWP application for testing purposes. Configuration uses LocalCache, adding this into the utils.cs to resolve to the special Windows 10 folders.

--- a/Stack/Opc.Ua.Core/project.json
+++ b/Stack/Opc.Ua.Core/project.json
@@ -23,11 +23,14 @@
         "Microsoft.AspNetCore.Server.Kestrel.Https": "1.0.0"
       }
     },
-    "uap10.0": {
-      "dependencies": {
+    "uap10.0": 
+    {
+      "dependencies": 
+      {
         "System.Net.NameResolution": "4.0.0"
       },
-      "buildOptions": {
+      "buildOptions": 
+      {
         "define": [ "NO_HTTPS" ]
       }
     }
